# drims2_dice_simulator

./: README.md  package.xml  setup.cfg  setup.py
drims2_dice_simulator/: dice_generator.py  dice_spawner.py  dice_spawner2.py  dice_spawner_2.py
launch/: spawn_dice.launch.py
scripts/: dice_spawner.py
srv/: AttachObject.srv  SpawnDice.srv
urdf/: dice.urdf.xacro
