<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drims2_dice_simulator</name>
  <version>0.0.0</version>
  <description>Dice spawning and face detection service</description>
  <maintainer email="cesare.tonola@cnr.it">riemann</maintainer>
  <license>MIT</license>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>moveit_commander</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>drims2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
